# Contract-deposit

account_deposit/: Cargo.toml  build.sh
account_deposit/src/: account_deposit.rs  lib.rs  storage_impl.rs  token_receivers.rs  utils.rs
front-end-app-near/: .env  package-lock.json  package.json
front-end-app-near/src/: App.js  index.js
front-end-app-near/src/components/: Deposit.js  Withdraw.js  WrapToken.js
front-end-app-near/src/components/Header/: Header.js
front-end-app-near/src/hooks/: useContract.js  useNear.js
front-end-app-near/src/pages/: Account.js  Home.js  Pools.js  index1.js
front-end-app-near/src/services/: config.js  near.js
near-ui-sample/: package-lock.json  package.json  tsconfig.json
near-ui-sample/public/: index.html
near-ui-sample/src/: index.jsx
near-ui-sample/src/components/AccountDetails/: index.jsx
near-ui-sample/src/components/Buttons/: index.jsx
near-ui-sample/src/components/DarkMode/: index.jsx
near-ui-sample/src/components/Header/: index.jsx
near-ui-sample/src/components/Logo/: index.css  index.jsx
near-ui-sample/src/components/Menu/: index.jsx
near-ui-sample/src/components/Sidebar/: index.jsx
near-ui-sample/src/context/: authContext.js
near-ui-sample/src/pages/: App.jsx
near-ui-sample/src/pages/Swap/: index.jsx
near-ui-sample/src/services/: config.js  near.js
