[package]
name = "account_deposit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
uint = {version = "0.9.3", default-features = false}

[dev-dependencies]
near-sdk-sim = "3.1.0"
rand = "0.8"
rand_pcg = "0.3"
